--- a/public-html/index.html
+++ b/public-html/index.html
@@ -1,3 +1,3 @@
 <html>
-    <h1>This is the first ever web site created by Docker Image Updated</h2>
+    <h1>This is the first ever web site created by Docker Image Updated and From GIT</h2>
 </html>
